[package]
name = "visqol-rs"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 3
debug = true

[dependencies]
ndarray = "0.15.4"
ndarray-linalg = { version = "0.10" }
ndarray-stats = "0.5.0"
hound = "3.4.0"
approx = "0.5.1"
more-asserts = "0.2.2"
num = "0.4.0"
itertools = "0.10.3"
num-traits = "0.2.15"
rustfft = "6.0.1"
clap = { version = "3.1.18", features = ["derive"] }
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
ffsvm = "0.8"
prettytable-rs = "0.8.0"
thiserror = "1.0.32"
log = "0.4.17"
simplelog = "0.12.0"
tract-onnx = "0.17.4"

[patch.crates-io]
ffsvm = { path = "../../libs/ffsvm-rust"}
simd_aligned = { path = "../../libs/simd_aligned_rust"}
#tflite = { git = "https://github.com/Marekkon5/tflite-rs"}