[package]
name = "visqol-rs"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Strübig"]
categories = ["multimedia::audio", "science"]
keywords = ["speech-quality", "audio", "voice"]
license = "Apache-2.0"
readme = "README.md"


[profile.release]
opt-level = 3
strip = "symbols"
debug = false
lto = "fat"

[dependencies]
ndarray = "0.15.4"
ndarray-linalg = "0.16.0"
ndarray-stats = "0.5.0"
hound = "3.4.0"
approx = "0.5.1"
more-asserts = "0.3.1"
num = "0.4.0"
itertools = "0.10.3"
num-traits = "0.2.15"
rustfft = "6.0.1"
clap = { version = "3.1.18", features = ["derive"] }
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
ffsvm = "0.8"
prettytable-rs ="0.10.0"
thiserror = "1.0.32"
log = "0.4.17"
simplelog = "0.12.0"
tract-onnx = "0.18.2"

[patch.crates-io]
ffsvm = { git  = "https://github.com/dstrub18/ffsvm-rust"}
simd_aligned = { git = "https://github.com/dstrub18/simd_aligned_rust"}