[package]
name = "visqol-rs"
version = "0.1.3"
edition = "2018"
authors = ["Daniel Strübig"]
categories = ["multimedia::audio", "science"]
keywords = ["speech-quality", "audio", "voice"]
license = "Apache-2.0"
readme = "README.md"
description = "The Visqol v3.1 algorithm for speech quality evaluation in Rust"
exclude = ["test_data"]
repository = "https://github.com/dstrub18/visqol-rs"

[dependencies]
ndarray = "0.16.1"
ndarray-linalg = "0.17.0"
ndarray-stats = "0.6.0"
hound = "3.4.0"
num = "0.4.0"
itertools = "0.14.0"
num-traits = "0.2.15"
rustfft = "6.0.1"
serde = { version = "1.0", features = ["derive"] }
ffsvm = "0.12.0"
thiserror = "2.0.16"
log = "0.4.17"

[dev-dependencies]
approx = "0.5.1"
