[package]
name = "visqol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visqol-rs = {path = "../visqol-rs"}
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
csv = "1.1.6"
serde_json = "1.0.82"
prettytable-rs ="0.10.0"
serde = { version = "1.0", features = ["derive"] }
