[package]
name = "visqol"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Strübig"]
categories = ["multimedia::audio", "science"]
keywords = ["speech-quality", "audio", "voice"]
license = "Apache-2.0"
readme = "README.md"
description = "The Visqol v3.1 cli tool for speech quality evaluation in Rust"
exclude = ["test_data"]
repository = "https://github.com/dstrub18/visqol-rs"

[[bin]]
name = "visqol"
test = false
example = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visqol-rs = "0.1.1"
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
csv = "1.1.6"
serde_json = "1.0.82"
prettytable-rs = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
